--- a/about.html
+++ b/about.html
@@ -1,3 +1,6 @@
+<h1>MY LOVE</h1>
+
+<a href="./My.html"><img src="./Image/WhatsApp Image 2024-07-17 at 6.27.27 PM.jpeg" width="150"></a>
 <h2>Name:Rohit Sharma</h2>
 <h2>F/Name:Mr. Chander Bhan Sharma</h2>
 <h2>M/Name: Mrs. Savitri Devi</h2>
@@ -9,4 +12,6 @@
 <h2>Qualification:12th</h2>
 <hr/>
 <a href="./contact.html">
-<h1>Contact Us</h1></a>
+<h1>Contact Us</h1></a><link
+rel="stylesheet"
+ href="./style.css">
