--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,9 @@
-<h2>Mobile NO. 8059982296</h2>
+<style>h2{color: white;}</style>
+
+<h2 style="color: rgb(254, 195, 0);">Mobile NO. 8059982296</h2>
 <a href="https://www.instagram.com/jaani_lyrical?igsh=MzBxcGM1MjhzODUw"><h2>Instagram</h2>
 </a><a href="http://wa.me/+918059982296"><h2>Whatsapp</h2>
 </a>
+<link
+rel="stylesheet"
+ href="./style.css">
