--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rohit Sharma</title>
 </head>
+<link
+rel="stylesheet"
+ href="./style.css">
 <body>
     <h1>Welcome To My Website!</h1>
 <hr/>
